--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
-<body data-name=" - tino -" data-tagline="Producer • Designer • Creator" data-twitter="https://twitter.com/yourhandle" data-instagram="https://instagram.com/yourhandle" data-github="https://github.com/yourhandle">
+<body data-name=" - tino -" data-tagline="Producer • Designer • Creator" data-twitter="https://twitter.com/batmantinoo" data-instagram="https://instagram.com/nyc.tinoo" data-github="https://github.com/tinosgames">
   <div id="app">
     <canvas id="bgCanvas" aria-hidden="true"></canvas>
 
