--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title> - tino bio -</title>
+  <title>- tino bio -</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
-<body data-name=" - tino -" data-tagline="Producer • Designer • Creator" data-twitter="https://twitter.com/batmantinoo" data-instagram="https://instagram.com/nyc.tinoo" data-github="https://github.com/tinosgames">
+<body data-name="YOUR NAME" data-tagline="Producer • Designer • Creator" data-twitter="https://twitter.com/yourhandle" data-instagram="https://instagram.com/yourhandle" data-github="https://github.com/yourhandle">
   <div id="app">
     <canvas id="bgCanvas" aria-hidden="true"></canvas>
 
@@ -41,7 +41,8 @@
     <section id="about" class="about">
       <div class="about-inner">
         <h2>About</h2>
-        <p class="lead">C# coding language • SI - NYC • metro metro metro </p>
+        <p class="lead"> NYC • BIKES • METRO • TRAVIS </p>
+        <p>Made for high-resolution displays. Edits are done by committing changes to the repo. ALL CREDITS TINO</p>
       </div>
     </section>
 
