--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       </div>
     </section>
 
+    <!-- 🎵 Waveform Visualizer Canvas -->
+    <canvas id="visualizer-canvas"></canvas>
+
     <audio id="bgMusic" loop preload="auto">
       <source src="music/bg-music.mp3" type="audio/mpeg">
     </audio>
