--- a/index.html
+++ b/index.html
@@ -1,30 +1,57 @@
-<!DOCTYPE html>
-<html lang="en" data-name="YOUR NAME" data-tagline="Producer • Designer • Creator"
-      data-twitter="https://twitter.com/yourhandle"
-      data-instagram="https://instagram.com/yourhandle"
-      data-github="https://github.com/yourhandle">
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Bio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Your Name — Dark Neon</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
-<body>
-  <canvas id="bgCanvas"></canvas>
-  
-  <div class="content">
-    <img src="profile.jpg" alt="Profile" class="profile-pic">
-    <h1 id="name"></h1>
-    <h2 id="tagline"></h2>
+<body data-name="YOUR NAME" data-tagline="Producer • Designer • Creator" data-twitter="https://twitter.com/yourhandle" data-instagram="https://instagram.com/yourhandle" data-github="https://github.com/yourhandle">
+  <div id="app">
+    <canvas id="bgCanvas" aria-hidden="true"></canvas>
 
-    <div class="waveform" id="waveform"></div>
+    <header class="corner-controls">
+      <button id="playPause" class="icon-btn" aria-label="Toggle music">⏵</button>
+      <a class="icon-btn" href="#about" aria-label="About">⍟</a>
+    </header>
 
-    <div id="links"></div>
+    <main class="hero">
+      <div class="hero-inner">
+        <div class="profile-wrap">
+          <div class="neon-ring"></div>
+          <img src="images/profile.png" alt="Profile" class="profile">
+        </div>
 
-    <button id="playPause" class="music-btn">⏵</button>
-    <audio id="bgMusic" src="music.mp3" loop></audio>
+        <div class="text">
+          <h1 id="name">Your Name</h1>
+          <p id="tagline">Producer • Designer • Creator</p>
+
+          <div class="links" id="links">
+            <!-- social icons injected by script -->
+          </div>
+        </div>
+      </div>
+
+      <div class="scroll-hint">Scroll</div>
+    </main>
+
+    <section id="about" class="about">
+      <div class="about-inner">
+        <h2>About</h2>
+        <p class="lead">Short bio — cinematic and clean. Replace this text in index.html or via the attributes.</p>
+        <p>Made for high-resolution displays. Edits are done by committing changes to the repo.</p>
+      </div>
+    </section>
+
+    <audio id="bgMusic" loop preload="auto">
+      <source src="music/bg-music.mp3" type="audio/mpeg">
+    </audio>
+
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
