--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="text">
-          <h1 id="name">Your Name</h1>
+          <h1 id="name">- tino -</h1>
           <p id="tagline">Producer • Designer • Creator</p>
 
           <div class="links" id="links">
