--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="about" class="about">
       <div class="about-inner">
         <h2>About</h2>
-        <p class="lead">Short bio — cinematic and clean. Replace this text in index.html or via the attributes.</p>
+        <p class="lead">NYC • BIKES • METRO • TRAVIS</p>
         <p>Made for high-resolution displays. Edits are done by committing changes to the repo.</p>
       </div>
     </section>
