--- a/webhooksender/sender.html
+++ b/webhooksender/sender.html
@@ -4,24 +4,35 @@
   <meta charset="UTF-8">
   <title>Discord Webhook Sender</title>
   <style>
-    body {
+    body, html {
       margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #282846);
       color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    }
+
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #0d0d1a;
+      z-index: -1;
     }
 
     .container {
+      position: relative;
+      z-index: 1;
       text-align: center;
-      background: rgba(40, 40, 60, 0.9);
+      background: rgba(40, 40, 60, 0.85);
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.4);
       width: 400px;
+      margin: auto;
+      top: 50%;
+      transform: translateY(-50%);
     }
 
     h1 {
@@ -59,6 +70,8 @@
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <div class="container">
     <h1>Discord Webhook Sender</h1>
     <input type="text" id="webhookInput" placeholder="Enter your Webhook URL">
@@ -93,6 +106,25 @@
         alert('Failed to send message. Check console for details.');
       });
     }
+  </script>
+
+  <!-- Particles.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 100 },
+        "size": { "value": 3 },
+        "move": { "speed": 2 },
+        "line_linked": { "enable": true, "opacity": 0.2 },
+        "opacity": { "value": 0.5 }
+      },
+      "interactivity": {
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" }
+        }
+      }
+    });
   </script>
 </body>
 </html>
