--- a/webhooksender/sender.html
+++ b/webhooksender/sender.html
@@ -8,9 +8,12 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow: hidden;
       font-family: Arial, sans-serif;
       color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
 
     #particles-js {
@@ -22,17 +25,12 @@
     }
 
     .container {
-      position: relative;
-      z-index: 1;
       text-align: center;
       background: rgba(40, 40, 60, 0.85);
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.4);
       width: 400px;
-      margin: auto;
-      top: 50%;
-      transform: translateY(-50%);
     }
 
     h1 {
