--- a/webhooksender/sender.html
+++ b/webhooksender/sender.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Discord Webhook Sender</title>
+  <title>lerpy webhook sender thingy</title>
   <style>
     body, html {
       margin: 0;
