--- a/drive/index.html
+++ b/drive/index.html
@@ -1,34 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>teeno.xyz / drive</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>teeno.xyz | drive — access tons of cool files uploaded by Lerpy.</title>
+<link rel="stylesheet" href="/global/style.css" />
+<style>
+/* Hide default cursor */
+body, * { cursor: none !important; }
+
+/* File list container */
+#file-list { 
+  max-width: 900px; 
+  margin: 40px auto; 
+  background: #0e0e0e; 
+  border: 2px solid #222; 
+  border-radius: 10px; 
+  padding: 25px; 
+  text-align: left; 
+  animation: fadeIn 1s ease forwards; 
+}
+
+/* Individual items */
+.item { 
+  display: flex; 
+  align-items: center; 
+  padding: 8px 12px; 
+  border-radius: 5px; 
+  transition: background 0.2s ease; 
+}
+.item:hover { background: #1f1f1f; }
+
+/* Folder style */
+.folder { font-weight: bold; cursor: pointer; color: #6c63ff; }
+.folder::before { content: "📁 "; margin-right: 8px; }
+
+/* File style */
+.file { color: #fff; }
+.file::before { content: "📄 "; margin-right: 8px; }
+
+/* Download links */
+.download-link { 
+  margin-left: auto; 
+  color: #8f8cff; 
+  text-decoration: none; 
+  font-size: 0.9rem; 
+  transition: color 0.3s ease; 
+}
+.download-link:hover { color: #6c63ff; }
+
+/* Subfolders */
+.subfolder { margin-left: 20px; }
+
+/* Copy button */
+button.copy-btn { 
+  margin-left: auto; 
+  background: none; 
+  border: none; 
+  color: #8f8cff; 
+  cursor: pointer; 
+  font-size: 1rem; 
+  transition: color 0.3s ease; 
+}
+button.copy-btn:hover { color: #6c63ff; }
+
+/* Header and navigation */
+header { text-align: center; margin-top: 20px; }
+header h1 a { color: #6c63ff; text-decoration: none; }
+nav a { margin: 0 10px; color: #fff; text-decoration: none; }
+nav a:hover { color: #6c63ff; }
+</style>
 </head>
 <body>
-  <header class="topbar">
-    <div class="brand">teeno<span class="dot">.xyz</span> / drive</div>
-    <input id="search" type="search" placeholder="Search files..." />
-  </header>
 
-  <main>
-    <div id="list" class="file-list"></div>
-    <div id="empty" class="empty">No files found.</div>
-  </main>
+<main>
+  <div id="file-list">Loading files...</div>
+</main>
 
-  <!-- Preview modal -->
-  <div id="modal" class="modal" aria-hidden="true">
-    <div class="modal-inner">
-      <button id="close" class="close">✕</button>
-      <div id="preview" class="preview-content"></div>
-      <div class="modal-actions">
-        <a id="download" class="btn primary" href="#" download>Download</a>
-        <button id="open" class="btn">Open in new tab</button>
-      </div>
-    </div>
-  </div>
+<footer style="text-align:center; margin:40px 0; color:#aaa;">
+  Built with ✨ by <a href="https://github.com/lerpyypluh" target="_blank" rel="nofollow noopener noreferrer" style="color:#6c63ff;">Lerpy</a>
+</footer>
 
-  <script src="script.js" defer></script>
+<div class="cursor-circle" id="cursor"></div>
+
+<script>
+const cursor = document.getElementById('cursor');
+document.addEventListener('mousemove', e => {
+  cursor.style.left = e.clientX + 'px';
+  cursor.style.top = e.clientY + 'px';
+});
+
+function copyToClipboard(text) {
+  navigator.clipboard.writeText(text).then(() => alert(`Copied: ${text}`));
+}
+
+// Customize your GitHub repository
+const owner = "lerpyypluh";
+const repo = "lerpy-drive";
+const fileList = document.getElementById("file-list");
+
+// Recursive fetch function
+async function fetchContents(path = "storage", container) {
+  try {
+    const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`);
+    if (!response.ok) throw new Error(`Failed to fetch files at path: ${path}`);
+    const items = await response.json();
+
+    for (const item of items) {
+      const el = document.createElement("div");
+      el.classList.add("item");
+      const fullPath = item.path;
+      el.dataset.path = fullPath;
+
+      if(item.type === "dir") {
+        el.classList.add("folder");
+        const folderName = document.createElement("span");
+        folderName.textContent = item.name;
+        el.appendChild(folderName);
+
+        const subContainer = document.createElement("div");
+        subContainer.classList.add("subfolder");
+        subContainer.style.display = "none";
+        container.appendChild(el);
+        container.appendChild(subContainer);
+
+        let loaded = false;
+        const toggleFolder = () => {
+          if(subContainer.style.display === "none") {
+            subContainer.style.display = "block";
+            if(!loaded) { fetchContents(fullPath, subContainer); loaded = true; }
+          } else subContainer.style.display = "none";
+        };
+        el.addEventListener("click", toggleFolder);
+
+      } else if(item.type === "file") {
+        el.classList.add("file");
+        const link = document.createElement("a");
+        link.href = item.download_url;
+        link.textContent = item.name;
+        link.target = "_blank";
+        link.className = "download-link";
+        el.appendChild(link);
+
+        const copyBtn = document.createElement("button");
+        copyBtn.textContent = "🔗";
+        copyBtn.className = "copy-btn";
+        copyBtn.title = "Copy file URL";
+        copyBtn.addEventListener("click", () => copyToClipboard(item.download_url));
+        el.appendChild(copyBtn);
+
+        container.appendChild(el);
+      }
+    }
+
+  } catch(err) {
+    container.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
+    console.error(err);
+  }
+}
+
+fileList.innerHTML = "";
+fetchContents("storage", fileList);
+</script>
+
+<script src="/global/snow.js"></script>
 </body>
 </html>
