--- a/drive/index.html
+++ b/drive/index.html
@@ -93,7 +93,7 @@ footer a:hover { text-decoration: underline; }
 </main>
 
 <footer>
-  Built with ✨ by <a href="https://github.com/lerpyypluh" target="_blank" rel="nofollow noopener noreferrer">Teeno</a>
+  Built with ✨ by <a href="https://github.com/lerpyypluh" target="_blank" rel="nofollow noopener noreferrer">lerpyypluh</a>
 </footer>
 
 <div class="cursor-circle" id="cursor"></div>
