--- a/drive/index.html
+++ b/drive/index.html
@@ -1,81 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>teeno.xyz | Drive — access files uploaded by Teeno</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>teeno.xyz | Drive</title>
 <style>
-/* Hide default cursor */
-body, * { cursor: none !important; margin: 0; padding: 0; font-family: sans-serif; background: #111; color: #fff; }
+/* === General Reset & Body === */
+* { margin: 0; padding: 0; box-sizing: border-box; cursor: none; }
+body { font-family: 'Poppins', sans-serif; background: #0c0c0c; color: #fff; }
 
-/* Header */
-header { text-align: center; padding: 20px 0; }
-header h1 a { color: #6c63ff; text-decoration: none; font-size: 2rem; }
-nav a { margin: 0 10px; color: #fff; text-decoration: none; }
+/* === Header === */
+header { text-align: center; padding: 40px 20px; }
+header h1 a { font-size: 3rem; color: #8f8cff; text-decoration: none; transition: 0.3s; }
+header h1 a:hover { color: #6c63ff; }
+nav { margin-top: 15px; }
+nav a { margin: 0 15px; color: #fff; text-decoration: none; font-weight: 500; transition: 0.3s; }
 nav a:hover { color: #6c63ff; }
 
-/* File list container */
-#file-list { 
-  max-width: 900px; 
-  margin: 40px auto; 
-  background: #0e0e0e; 
-  border: 2px solid #222; 
-  border-radius: 10px; 
-  padding: 25px; 
-  text-align: left; 
+/* === File list container === */
+#file-list {
+  max-width: 1000px;
+  margin: 50px auto;
+  background: #111;
+  border: 2px solid #222;
+  border-radius: 15px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-/* Individual items */
-.item { display: flex; align-items: center; padding: 8px 12px; border-radius: 5px; transition: background 0.2s ease; }
-.item:hover { background: #1f1f1f; }
+/* === Individual items === */
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 20px;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  background: #111;
+}
+.item:hover { background: #1a1a1a; transform: translateX(3px); }
 
-/* Folder style */
-.folder { font-weight: bold; cursor: pointer; color: #6c63ff; }
+/* === Folder style === */
+.folder { font-weight: bold; cursor: pointer; color: #6c63ff; flex: 1; }
 .folder::before { content: "📁 "; margin-right: 8px; }
 
-/* File style */
-.file { color: #fff; }
+/* === File style === */
+.file { color: #fff; flex: 1; }
 .file::before { content: "📄 "; margin-right: 8px; }
 
-/* Download links */
-.download-link { 
-  margin-left: auto; 
-  color: #8f8cff; 
-  text-decoration: none; 
-  font-size: 0.9rem; 
-  transition: color 0.3s ease; 
+/* === Download link & copy button === */
+.download-link, .copy-btn {
+  margin-left: 10px;
+  text-decoration: none;
+  font-size: 0.9rem;
+  color: #8f8cff;
+  transition: 0.3s;
 }
-.download-link:hover { color: #6c63ff; }
+.download-link:hover, .copy-btn:hover { color: #6c63ff; cursor: pointer; }
 
-/* Subfolders */
-.subfolder { margin-left: 20px; }
+/* === Subfolders === */
+.subfolder { margin-left: 25px; display: flex; flex-direction: column; gap: 6px; }
 
-/* Copy button */
-button.copy-btn { 
-  margin-left: auto; 
-  background: none; 
-  border: none; 
-  color: #8f8cff; 
-  cursor: pointer; 
-  font-size: 1rem; 
-  transition: color 0.3s ease; 
-}
-button.copy-btn:hover { color: #6c63ff; }
+/* === Footer === */
+footer { text-align: center; padding: 40px 20px; font-size: 0.9rem; color: #aaa; }
+footer a { color: #8f8cff; text-decoration: none; transition: 0.3s; }
+footer a:hover { color: #6c63ff; text-decoration: underline; }
 
-/* Footer */
-footer { text-align:center; margin:40px 0; color:#aaa; }
-footer a { color:#6c63ff; text-decoration:none; }
-footer a:hover { text-decoration: underline; }
-
-/* Custom cursor */
+/* === Custom cursor === */
 .cursor-circle {
   position: fixed;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   background: #6c63ff;
   border-radius: 50%;
   pointer-events: none;
   transform: translate(-50%, -50%);
+  mix-blend-mode: difference;
+  transition: width 0.2s ease, height 0.2s ease;
 }
 </style>
 </head>
@@ -93,30 +96,30 @@ footer a:hover { text-decoration: underline; }
 </main>
 
 <footer>
-  Built with ✨ by <a href="https://github.com/lerpyypluh" target="_blank" rel="nofollow noopener noreferrer">lerpyypluh</a>
+  Built with ✨ by <a href="https://github.com/lerpyypluh" target="_blank" rel="nofollow noopener noreferrer">Teeno</a>
 </footer>
 
 <div class="cursor-circle" id="cursor"></div>
 
 <script>
-// Custom cursor
+// === Custom Cursor ===
 const cursor = document.getElementById('cursor');
 document.addEventListener('mousemove', e => {
   cursor.style.left = e.clientX + 'px';
   cursor.style.top = e.clientY + 'px';
 });
 
-// Copy link to clipboard
+// === Copy file URL ===
 function copyToClipboard(text) {
   navigator.clipboard.writeText(text).then(() => alert(`Copied: ${text}`));
 }
 
-// GitHub repo info
+// === GitHub repo info ===
 const owner = "lerpyypluh";
 const repo = "bio";
 const fileList = document.getElementById("file-list");
 
-// Recursive fetch function
+// === Fetch /drive folder contents ===
 async function fetchContents(path = "drive", container) {
   try {
     const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`);
@@ -144,7 +147,7 @@ async function fetchContents(path = "drive", container) {
         let loaded = false;
         const toggleFolder = () => {
           if(subContainer.style.display === "none") {
-            subContainer.style.display = "block";
+            subContainer.style.display = "flex";
             if(!loaded) { fetchContents(fullPath, subContainer); loaded = true; }
           } else subContainer.style.display = "none";
         };
@@ -176,7 +179,7 @@ async function fetchContents(path = "drive", container) {
   }
 }
 
-// Start fetching from /drive folder
+// === Initialize ===
 fileList.innerHTML = "";
 fetchContents("drive", fileList);
 </script>
