--- a/rainxyz.html
+++ b/rainxyz.html
@@ -3,13 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rain.XYZ</title>
+  <title>Rain Mod Menu</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: 'Minecraftia';
+      src: url('fonts/Minecraftia.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    body {
+      font-family: 'Minecraftia', sans-serif;
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-white flex flex-col items-center p-8">
 
   <header class="text-center mt-10">
-    <h1 class="text-5xl font-bold mb-4">Rain.XYZ</h1>
+    <h1 class="text-5xl font-bold mb-4">Rain Mod Menu</h1>
     <p class="text-lg opacity-80">A clean, powerful Gorilla Tag mod menu.</p>
     <img src="images/modmenu-preview.png" alt="Mod Menu Preview" class="mt-6 rounded-2xl shadow-lg max-w-full">
   </header>
