Change body font to Minecraftia with class

--- a/rainxyz.html
+++ b/rainxyz.html
@@ -13,12 +13,12 @@
       font-style: normal;
     }
 
-    body {
-      font-family: 'Minecraftia', sans-serif;
+    .minecraft-font {
+      font-family: 'Minecraftia', sans-serif !important;
     }
   </style>
 </head>
-<body class="bg-gray-900 text-white flex flex-col items-center p-8">
+<body class="minecraft-font bg-gray-900 text-white flex flex-col items-center p-8">
 
   <header class="text-center mt-10">
     <h1 class="text-5xl font-bold mb-4">Rain Mod Menu</h1>
